syntax = "proto3";

option csharp_namespace = "GrpcProductsClient";

import "google/protobuf/empty.proto";

package product;

message Category {
    string name = 1;
    repeated string subcategories = 2;
}

message Product {
    int32 id = 1;
    string name = 2;
    float price = 3;
    int32 categoryId = 4;
}

message Filter {
    string category = 1;
    string subcategory = 2;
    string search = 3;
}

message CategoriesResponse {
    repeated Category categories = 1;
}

message ProductsResponse {
    repeated Product products = 1;
}

message FilterRequest {
    Filter filter = 1;
}

service ProductsApi {
    rpc GetCategories (google.protobuf.Empty) returns (CategoriesResponse);
    rpc GetProducts (FilterRequest) returns (ProductsResponse);
}
